# VirtualQuest

./: CMakeLists.txt  CharacterSheetBuilder.cpp  CharacterSheetBuilder.h  DungeonMaster.cpp  DungeonMaster.h  README.md  Settings.cpp  Settings.h  VirtualQuest.cpp  VirtualQuest.h  dice.cpp  dice.h  gameinfo.cpp  gameinfo.h  main.cpp  stringutils.cpp  stringutils.h
characters/: FullCharacter.cpp  MainPlayer.cpp  MainPlayer.h  Stats.h
characters/classes/: Barbarian.cpp  Barbarian.h  Class.cpp  Class.h
characters/races/: DrowElf.cpp  DrowElf.h  Elf.cpp  Elf.h  FullCharacter.cpp  FullCharacter.h  HighElf.cpp  HighElf.h  Languages.cpp  Languages.h  Race.cpp  Race.h  Stats.cpp  Stats.h  WoodElf.cpp  WoodElf.h
